endpoint for getting users BUT not done(1/2)
